--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6600cc" />
-    <meta
-      name="description"
-      content="Vtuber Coqui's Informational Site"
+    <meta name="description" content="Vtuber Coqui's Informational Site" />
+    <meta property="og:image" content="" id="og-image" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Coqui Monster</title>
   </head>
