--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6600cc" />
     <meta name="description" content="Vtuber Coqui's Informational Site" />
-    <meta property="og:image" content="" id="og-image" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" id="og-image" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
