--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,31 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6600cc" />
-    <meta name="description" content="Vtuber Coqui's Informational Site" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" id="og-image" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Coqui Monster</title>
+
+<!-- Primary Meta Tags -->
+<title>Coqui Monster</title>
+<meta name="title" content="Coqui Monster">
+<meta name="description" content="Vtuber Coqui's Informational Site">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://coqui.monster/">
+<meta property="og:title" content="Coqui Monster">
+<meta property="og:description" content="Vtuber Coqui's Informational Site">
+<meta property="og:image" content="/favicon.ico">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://coqui.monster/">
+<meta property="twitter:title" content="Coqui Monster">
+<meta property="twitter:description" content="Vtuber Coqui's Informational Site">
+<meta property="twitter:image" content="/favicon.ico">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
