Test: Builder SEO defaults

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Coqui Monster</title>
-    <meta name="description" content="">
+    <meta name="description" content="default">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta charset="utf-8" />
