Test: Builder SEO loading

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>Coqui Monster</title>
-    <meta name="description" content="default">
+    <meta name="description" content="" id="SEO-Desc">
+    <meta property="og:image" content="" id="SEO-Image">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta charset="utf-8" />
