Fix: Revert SEO modifications

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <title>Coqui Monster</title>
-    <meta name="description" content="" id="SEO-Desc">
-    <meta property="og:image" content="" id="SEO-Image">
+    <meta name="description" content="Vtuber Coqui's Informational Site">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta charset="utf-8" />
