Add meta data and SEO info

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Coqui Monster</title>
-    <meta name="description" content="Vtuber Coqui's Informational Site">
-
+    <title>COQUI</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="COQUI" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta charset="utf-8" />
+
+    <meta charset="UTF-8" />
+    <meta
+      name="keywords"
+      content="coqui, vtuber, southside, south side, twitch, streamer, meat, monster, coqui monster, c0qui"
+    />
+    <meta name="description" content="Vtuber Coqui Saporana's Links and Info" />
+    <meta name="copyright" content="Sevrene" />
+    <meta name="author" content="Sevrene, sevrene.dev@outlook.com" />
+    <meta name="designer" content="Sevrene, sevrene.dev@outlook.com, Coqui" />
+    <meta name="owner" content="Sevrene" />
+    <meta name="language" content="EN" />
+    <meta name="url" content="https://coqui.monster/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6600cc" />
-    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:site_name" content="COQUI" />
+    <meta
+      property="og:description"
+      content="Vtuber Coqui Saporana's Links and Info"
+    />
+    <meta property="og:url" content="https://coqui.monster/" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter -->
+    <meta property="twitter:title" content="COQUI" />
+    <meta
+      property="twitter:description"
+      content="Vtuber Coqui Saporana's Links and Info"
+    />
+    <meta property="twitter:url" content="https://coqui.monster/" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
