--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,34 @@
     <title>COQUI</title>
     <!-- Primary Meta Tags -->
     <meta name="title" content="COQUI" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
-    <meta charset="UTF-8" />
+    <meta name="description" content="Vtuber Coqui Saporana's Links and Info" />
     <meta
       name="keywords"
       content="coqui, vtuber, southside, south side, twitch, streamer, meat, monster, coqui monster, c0qui"
     />
-    <meta name="description" content="Vtuber Coqui Saporana's Links and Info" />
+    <meta name="theme-color" content="#6600cc" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="copyright" content="Sevrene" />
     <meta name="author" content="Sevrene, sevrene.dev@outlook.com" />
-    <meta name="designer" content="Sevrene, sevrene.dev@outlook.com, Coqui" />
-    <meta name="owner" content="Sevrene" />
+    <meta name="creator" content="Sevrene, sevrene.dev@outlook.com, Coqui" />
     <meta name="language" content="EN" />
     <meta name="url" content="https://coqui.monster/" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#6600cc" />
+
     <!-- Open Graph / Facebook -->
-    <meta property="og:site_name" content="COQUI" />
+    <meta property="og:title" content="COQUI" />
     <meta
       property="og:description"
       content="Vtuber Coqui Saporana's Links and Info"
     />
     <meta property="og:url" content="https://coqui.monster/" />
+    <meta property="og:site_name" content="COQUI" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/schedule.jpg" />
     <meta property="og:type" content="website" />
+    <meta property="og:theme-color" content="#6600cc" />
+
     <!-- Twitter -->
     <meta property="twitter:title" content="COQUI" />
     <meta
@@ -35,6 +39,9 @@
       content="Vtuber Coqui Saporana's Links and Info"
     />
     <meta property="twitter:url" content="https://coqui.monster/" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/schedule.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:theme-color" content="#6600cc" />
 
     <link
       rel="stylesheet"
