--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     />
     <meta property="og:url" content="https://coqui.monster/" />
     <meta property="og:site_name" content="COQUI" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/schedule.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/shareImage.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:theme-color" content="#6600cc" />
 
@@ -39,7 +39,7 @@
       content="Vtuber Coqui Saporana's Links and Info"
     />
     <meta property="twitter:url" content="https://coqui.monster/" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/schedule.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/shareImage.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:theme-color" content="#6600cc" />
 
